# Samara

./: .gitignore  README.md  pyproject.toml  runtime_storage.md  runtime_storage.plantuml
.devcontainer/: README.md
.devcontainer/python-spark/: README.md  devcontainer.json  docker-compose.yml
.devcontainer/python-spark/loki/: loki-config.yaml
.devcontainer/python-spark/mimir/: mimir.yaml
.devcontainer/python-spark/otel-collector/: otel-config.yaml
.devcontainer/python-spark/prometheus/: prometheus.yml
.devcontainer/python-spark/tempo/: tempo.yaml
.github/: copilot-instructions.md
.github/agents/: docs.agent.md  docstring-specialist.md  docstring.agent.md  documentation-expert.md  python-developer.agent.md  test-engineer.agent.md
.github/config/: .pylintrc
.github/instructions/: python_docstring.instructions.md
.github/workflows/: build-and-test.yml  ci.yaml
docs/: README.md  architecture.md  cli.md  getting_started.md  sequence_diagram.plantuml  telemetry.md
docs/alert/: README.md
docs/runtime/: README.md  spark.md
examples/: README.md
examples/json_join_select/: job.jsonc
examples/yaml_products_cleanup/: README.md  alert.yaml  job.yaml  products_schema.json
examples/yaml_products_cleanup/products/: products.csv
src/samara/: __init__.py  cli.py  exceptions.py  settings.py  telemetry.py  types.py
src/samara/alert/: __init__.py  controller.py  template.py  trigger.py
src/samara/runtime/: controller.py
tests/: conftest.py
tests/unit/: test_cli.py  test_main.py  test_settings.py  test_telemetry.py  test_types.py
(+198 files in other folders)
