[tool.poetry]
name = "Samara"
version = "0.1.1"
description = "Config Driven ETL Framework"
authors = ["Krijn van der Burg"]
readme = "README.md"
packages = [{ include = "samara", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
pyspark = "^4.0.1"
pandas = "^2.3.0"
pyarrow = "20.0.0"
numpy = "<2.0.0"
pyyaml = "^6.0.1"
requests = "^2.32.5"
structlog = "^25.4.0"
pydantic = "^2.11.9"
pydantic-settings = "^2.8.0"
email-validator = "^2.2.0"
pyjson5 = "^1.6.9"
click = "^8.1.0"
# OpenTelemetry core packages
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation = "^0.41b0"
# OTLP exporters for traces
opentelemetry-exporter-otlp = "^1.20.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
# Prometheus Remote Write exporter (push-only)
opentelemetry-exporter-prometheus-remote-write = "^0.41b0"
# W3C trace context propagation
opentelemetry-propagator-b3 = "^1.20.0"
# For runtime metrics collection
psutil = "^5.9.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3.0"
pytest-cov = ">=2.0.0"
pytest-xdist = ">=3.6.1"

[tool.poetry.group.cicd.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
